
Changelog
=========

2019.1.0 (unreleased)
---------------------

- Lock dossier subtree during resolve transition. [lgraf]
- Prevent dossiers from being resolved twice. [lgraf]
- Fix subject-filter for personal overview. [elioschmutz]
- Add date string localization for sablon data. [njohner]
- Fixed the REST API scan-in end point for organization units with non-ASCII in their titles. [Rotonen]
- Set default language for task reminders. [njohner]
- Suppress deletion events when filtering objects from copied subtrees. [lgraf]
- Avoid infinite loops when looking for parent dossiers. [lgraf]
- Make sure favorite button is in front of the watermark header. [njohner]
- Fix mail for task added activity with multiline comment. [njohner]
- Skip creation of the tasks pdf on resolve for dossiers without tasks. [phgross]
- Give View permission to Editors on mails. [njohner]
- Clear role assignments on contained object after forwarding creation. [njohner]
- Add custom sortable_title indexer to avoid cropping of content titles. [njohner]
- Testserver: add support for custom fixtures. [jone]
- Reindex and store additionally supported bumblebee documents. [elioschmutz]
- Fix scrubbing the server version out of the HTTP response headers. [Rotonen]
- Make sure docproperties gets updated when updating an agendaitem list or a protocol. [phgross]
- Fix order issue when deleting a favorite.  [phgross]
- Add document tooltip to inbox document listing. [njohner]
- Add a template tab for OneOffixx. [Rotonen]
- Fix logo upload in the theme control-panel. [phgross]
- Solr TabbedView filters: Also include non-wildcarded terms in query. [lgraf]
- Prevent deactivating dossiers with undeactivatable subdossiers. [Rotonen]
- Add an unrestricted search option to get_subdossiers(). [Rotonen]
- Better label the Oneoffixx template selection dropdown default value. [Rotonen]
- Notifications: Defer sending mails until end of transaction. [lgraf]